Add random quote endpoint
